--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Trello</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<header>
+		<div class="container">
+		
+		<input type="search" class="search"><i class="fa fa-search" aria-hidden="true"></i></input>
+
+
+		</div>
+	</header>
+
+	<section>
+		<div class="center">
+			
+		</div>
+	</section>
 
 
 
