upgradeando. css básico listo.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+<!-- comienza header-->
 	<header>
 		<div class="container">
 		
-		<input type="search" class="search"><i class="fa fa-search" aria-hidden="true"></i></input>
-
+		<!--<input type="search" class="search"><i class="fa fa-search" aria-hidden="true"></i></input>-->
+		<div class="logo"></div>
 
 		</div>
 	</header>
 
+
+
+<!-- comienza sección-->
+
 	<section>
-		<div class="center">
+		<div class="contcenter">
 			
+		<input type="text" placeholder="Añadir una lista...." id="btnstart">
+
+
 		</div>
 	</section>
+
+
+
 
 
 
