creando lista empezando función

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Trello</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -25,6 +26,15 @@
 		<div class="contcenter">
 			
 		<input type="text" placeholder="Añadir una lista...." id="btnstart">
+
+		<div id="lista">
+			<textarea id="textbox"></textarea> 
+			<button id="agregar" placeholder="add"></button>
+			<i class="fa fa-times" id="delete" aria-hidden="true"></i>
+
+		</div>
+		
+
 
 
 		</div>
